@@ -1,3 +1,7 @@
+Sat Mar 20 19:37:11 GMT 2004 (njh)
+----------------------------------
+  * libclamav/message.c:	Removed the duplicated code from bounce checks
+
 Sat Mar 20 17:49:43 GMT 2004 (njh)
 ----------------------------------
   * libclamav:	More flexable approach to scanning bounce messages within
